# cpp-subprocess

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.MIT  README.md  main  main.cc  s.py  script.sh  subprocess.hpp
.github/workflows/: cmake-multi-platform.yml
cmake/: subprocess-config.cmake
cpp-subprocess/: subprocess.hpp
test/: CMakeLists.txt  cat_fredirect.txt  env_script.sh  test  test.cc  test_cat  test_cat.cc  test_double_quotes.cc  test_env  test_env.cc  test_err_redirection  test_err_redirection.cc  test_exception.cc  test_redirection.cc.in  test_redirection.py  test_ret_code  test_ret_code.cc  test_split  test_split.cc  test_subprocess  test_subprocess.cc  test_windows.cc  write_err.sh  write_err.txt
test/case1/: test.cpp
test/test_ret_code.dSYM/Contents/: Info.plist
test/test_ret_code.dSYM/Contents/Resources/DWARF/: test_ret_code
